--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       const userAgent = navigator.userAgent || navigator.vendor || window.opera;
 
       if (/android/i.test(userAgent)) {
-        window.location.href = "https://www.ambienteconsultores.com";
+        window.location.href = "https://teamdeveloperinnovatechvr.github.io/HuevosKike/";
       } else if (/iPhone|iPad|iPod/i.test(userAgent)) {
         window.location.href = "https://lens.snap.com/experience/26dfbe49-a25e-442d-bcea-f8b121ced973";
       } else {
