--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         //window.location.href = "https://lens.snap.com/experience/26dfbe49-a25e-442d-bcea-f8b121ced973";
       } else {
         // Si no es Android ni iOS, puedes redirigir a una página general o mostrar un mensaje
-        console.log("Dispositivo no reconocido para redirección.");
+         window.location.href = "https://teamdeveloperinnovatechvr.github.io/HuevosKike/";
+        //console.log("Dispositivo no reconocido para redirección.");
       }
     }
   </script>
