--- a/index.html
+++ b/index.html
@@ -1,26 +1,137 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Redirección por dispositivo</title>
-  <script>
-    function redirigirSegunDispositivo() {
-      const userAgent = navigator.userAgent || navigator.vendor || window.opera;
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Ingreso a la experiencia</title>
+  <style>
+    * {
+      box-sizing: border-box;
+    }
 
-      if (/android/i.test(userAgent)) {
-        window.location.href = "https://teamdeveloperinnovatechvr.github.io/HuevosKike/";
-      } else if (/iPhone|iPad|iPod/i.test(userAgent)) {
-        window.location.href = "https://teamdeveloperinnovatechvr.github.io/HuevosKike/";
-        //window.location.href = "https://lens.snap.com/experience/26dfbe49-a25e-442d-bcea-f8b121ced973";
-      } else {
-        // Si no es Android ni iOS, puedes redirigir a una página general o mostrar un mensaje
-         window.location.href = "https://teamdeveloperinnovatechvr.github.io/HuevosKike/";
-        //console.log("Dispositivo no reconocido para redirección.");
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: #ffffff;
+      font-family: Arial, sans-serif;
+      color: #000000;
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      overflow: hidden;
+    }
+
+    /* Fondo repetido con opacidad */
+    body::before {
+      content: "";
+      background-image: url('K.png');
+      background-repeat: repeat;
+      background-size: 80px;
+      opacity: 0.05;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 0;
+    }
+
+    .container {
+      position: relative;
+      z-index: 1;
+      padding: 20px;
+      max-width: 500px;
+      width: 100%;
+      text-align: center;
+    }
+
+    img {
+      width: 60%;
+      max-width: 250px;
+      height: auto;
+      margin-bottom: 30px;
+    }
+
+    .mensaje {
+      font-size: 4.5vw;
+      margin-bottom: 40px;
+    }
+
+    @media (min-width: 400px) {
+      .mensaje {
+        font-size: 18px;
       }
     }
-  </script>
+
+    .boton {
+      background-color: #28a745;
+      color: #000000;
+      border: none;
+      padding: 15px 25px;
+      font-size: 5vw;
+      max-width: 100%;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    @media (min-width: 400px) {
+      .boton {
+        font-size: 18px;
+      }
+    }
+
+    .boton:hover {
+      background-color: #218838;
+    }
+
+    .contador {
+      margin-top: 20px;
+      font-size: 4.5vw;
+    }
+
+    @media (min-width: 400px) {
+      .contador {
+        font-size: 16px;
+      }
+    }
+  </style>
 </head>
-<body onload="redirigirSegunDispositivo()">
-  <p>Redireccionando según tu dispositivo...</p>
+<body>
+  <div class="container">
+    <img src="KIKESLOGO.png" alt="Logo Kike" />
+
+    <p class="mensaje">
+      Para vivir una experiencia completa y sin inconvenientes, se solicitará acceso a tu cámara. Por favor, acepta el permiso cuando aparezca el mensaje en pantalla.
+    </p>
+
+    <button class="boton" onclick="redirigir()">
+      Ingresar a la experiencia
+    </button>
+
+    <p class="contador" id="contador">Redirigiendo a la experiencia en 5 segundos...</p>
+  </div>
+
+  <script>
+    let segundos = 5;
+    const contadorTexto = document.getElementById("contador");
+
+    const intervalo = setInterval(() => {
+      segundos--;
+      if (segundos > 0) {
+        contadorTexto.textContent = `Redirigiendo a la experiencia en ${segundos} segundos...`;
+      } else {
+        contadorTexto.textContent = "Redirigiendo...";
+        clearInterval(intervalo);
+        redirigir();
+      }
+    }, 1000);
+
+    function redirigir() {
+      window.location.href = "https://teamdeveloperinnovatechvr.github.io/HuevosKike/";
+    }
+  </script>
 </body>
 </html>
